# vault

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.claude/: backlog-playbook.md  settings.json  skill-manifest.json
.claude/agents/: architect.md  code-reviewer.md  dependency-auditor.md  docs-writer.md  qa.md  security-auditor.md  spec-verifier.md  task-executor.md  task-planner.md
.claude/commands/: autopilot.md  backlog-autopilot-parallel.md  backlog-autopilot.md  backlog-run-parallel.md  backlog-run.md
.claude/scripts/: _hook_utils.py  auto-cleanup-merge.py  batch-format-typecheck.py  block-no-verify.py  check-fitness.py  config-protection.py  desktop-notify.py  detect-smoke-tests.py  edit-tracker.py  inject-retros.py  no-commit-on-main.py  periodic-checkpoint.py  post-compact.py  pre-compact.py  protect-checkout.py  protect-secrets.py  restructure-plan.py  scope-drift-summary.py  session-lock-touch.py  session-lock.py  spec-coverage-check.py  strategic-compact.py
.github/: FUNDING.yml
.github/workflows/: dco.yml
docs/: CONTRACT.md  agent-rules.md
docs/architecture/: diagrams.md  overview.md
docs/architecture/decisions/: 001-foundational-stack.md  002-socket-peercred-check.md  003-ttl-auto-wipe-clock.md  004-admin-verbs-rotation-invalidation.md  005-encrypted-at-rest-store.md  006-vault-http-api-compat.md  007-cloud-secret-manager-backend.md  008-persistent-encrypted-store.md  009-secure-memory-zeroization.md  010-verify-sandbox-attestation-binding.md  011-spiffe-identity-binding-seam.md
docs/plans/: roadmap.md
docs/spec/: SPEC.md  architecture.md  behaviors.md  configuration.md  data-model.md  fitness-functions.md  interfaces.md
docs/tasks/backlog/: 002-ttl-auto-wipe.md  003-admin-verbs-get-list-rotate.md  006-cloud-secret-manager-backend.md  009-apache-relicense-followup.md  010-verify-sandbox-attestation-binding.md  011-spiffe-identity-binding-seam.md  012-cloud-secret-manager-live-adapters.md
docs/tasks/completed/: 001-socket-peercred-check.md  004-encrypted-at-rest-store.md  005-vault-http-api-read-surface.md  007-persistent-encrypted-store.md  008-secure-memory-zeroization.md  009-apache-relicense-followup.md
docs/tasks/test-specs/: 001-socket-peercred-check-test-spec.md  002-ttl-auto-wipe-test-spec.md  003-admin-verbs-get-list-rotate-test-spec.md  004-encrypted-at-rest-store-test-spec.md  005-vault-http-api-read-surface-test-spec.md  006-cloud-secret-manager-backend-test-spec.md  007-persistent-encrypted-store-test-spec.md  008-secure-memory-zeroization-test-spec.md  010-verify-sandbox-attestation-binding-test-spec.md  011-spiffe-identity-binding-seam-test-spec.md  012-cloud-secret-manager-live-adapters-test-spec.md  coverage-tracker.md
scripts/: check-mermaid.py  check-task-state.sh  finish-task.sh  start-task.sh  verify-worktree-isolation.sh
src/: attest.rs  crypto.rs  handle.rs  http.rs  main.rs  principal.rs  secret_manager.rs  store_file.rs  vault.rs  zeroize.rs
