[package]
name = "vault"
version = "0.1.0"
edition = "2021"
description = "JIT zero-knowledge secret store + credential broker for the secure-agent ecosystem"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SO_PEERCRED peer-uid read on the IPC socket (D5 hardening, ADR-002). Minimal feature set:
# `socket` (getsockopt + PeerCredentials) + `user` (geteuid) — no default features. Pinned per
# dep-scan clearance (0.31.3).
nix = { version = "0.31", default-features = false, features = ["socket", "user"] }
