[package]
name = "vault"
version = "0.1.0"
edition = "2021"
description = "JIT zero-knowledge secret store + credential broker for the secure-agent ecosystem"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SO_PEERCRED peer-uid read on the IPC socket (D5 hardening, ADR-002). Minimal feature set:
# `socket` (getsockopt + PeerCredentials) + `user` (geteuid) — no default features. Pinned per
# dep-scan clearance (0.31.3).
nix = { version = "0.31", default-features = false, features = ["socket", "user"] }
# AES-256-GCM AEAD for the encrypted-at-rest store (ADR-005). Pinned to the mature RustCrypto
# 0.10.x line (pulls aead 0.5.x) — NOT the 0.11.0-rc release candidate (pulls aead 0.6.1, which
# fails dep-scan's 48h age gate; an RC AEAD in the crown-jewel secret path is unacceptable).
# Default features (aes + alloc) only — the 96-bit nonce comes from /dev/urandom, no `rand` crate.
aes-gcm = "0.10.3"
