[package]
name = "vault"
version = "1.0.0"
edition = "2021"
description = "JIT zero-knowledge secret store + credential broker for the secure-agent ecosystem"
license = "Apache-2.0"

[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SO_PEERCRED peer-uid read on the IPC socket (D5 hardening, ADR-002). Minimal feature set:
# `socket` (getsockopt + PeerCredentials) + `user` (geteuid) — no default features. Pinned per
# dep-scan clearance (0.31.3).
nix = { version = "0.31", default-features = false, features = ["socket", "user"] }
# AES-256-GCM AEAD for the encrypted-at-rest store (ADR-005). Pinned to the mature RustCrypto
# 0.10.x line (pulls aead 0.5.x) — NOT the 0.11.0-rc release candidate (pulls aead 0.6.1, which
# fails dep-scan's 48h age gate; an RC AEAD in the crown-jewel secret path is unacceptable).
# default-features = false: aes-gcm 0.10.3's default set is ["aes", "alloc", "getrandom"], where
# `getrandom` only powers its convenience generate_nonce()/generate_key() API, which this crate does
# not use (the 96-bit nonce comes from /dev/urandom by hand, src/crypto.rs). Dropping it removes
# getrandom + rand_core from the tree entirely, so no `rand`/getrandom RNG rides in behind AES-GCM.
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
# Opt-in, loopback-only, read-only HTTP read surface in the Vault KV-v2 API shape (ADR-006). Sync,
# thread-per-connection — mirrors the existing UnixListener model exactly; no async runtime, no
# tokio. Pinned to 0.12; small tree (ascii/chunked_transfer/httpdate/log) — dep-scan gate on task 005.
tiny_http = "0.12"
# Ed25519 signature VERIFICATION of the sandbox attestation at the inject edge (ADR-010, task 010).
# Chosen over `ed25519-dalek` by dep-scan MEASUREMENT: dalek (even --no-default-features --features std)
# pulls `zeroize` unavoidably via curve25519-dalek 4.x, the exact crate ADR-009 BLOCKED and the project
# hand-rolled `src/zeroize.rs` to avoid, plus 16 more transitive crates. ed25519-compact with
# `default-features = false` adds exactly ONE crate: no `zeroize`, no `rand`, no new `getrandom`
# (its `random`/`getrandom` default features are off, so tests sign from a fixed seed and production
# only verifies), no wasm tree. Tree clears `dep-scan check --lockfile Cargo.lock --lockfile-type
# crates` exit 0. Pinned to 2.3.1.
ed25519-compact = { version = "2.3.1", default-features = false }
